logs/pyjwt_build.log
There was an error importing jinja2.
Please run `conda install jinja2` to enable jinja template support
Removing old build directory
Removing old work directory
BUILD START: pyjwt-1.1.0-py27_0
Fetching package metadata: ......
Solving package specifications: .There was an error importing jinja2.
Please run `conda install jinja2` to enable jinja template support
+ /home/ubuntu/miniconda/envs/_build/bin/python setup.py install
running install
running bdist_egg
running egg_info
writing PyJWT.egg-info/PKG-INFO
writing top-level names to PyJWT.egg-info/top_level.txt
writing dependency_links to PyJWT.egg-info/dependency_links.txt
reading manifest file 'PyJWT.egg-info/SOURCES.txt'
reading manifest template 'MANIFEST.in'
writing manifest file 'PyJWT.egg-info/SOURCES.txt'
installing library code to build/bdist.linux-x86_64/egg
running install_lib
running build_py
creating build
creating build/lib
creating build/lib/jwt
copying jwt/utils.py -> build/lib/jwt
copying jwt/compat.py -> build/lib/jwt
copying jwt/algorithms.py -> build/lib/jwt
copying jwt/api.py -> build/lib/jwt
copying jwt/__init__.py -> build/lib/jwt
copying jwt/exceptions.py -> build/lib/jwt
creating build/lib/jwt/contrib
copying jwt/contrib/__init__.py -> build/lib/jwt/contrib
creating build/lib/jwt/contrib/algorithms
copying jwt/contrib/algorithms/__init__.py -> build/lib/jwt/contrib/algorithms
copying jwt/contrib/algorithms/py_ecdsa.py -> build/lib/jwt/contrib/algorithms
copying jwt/contrib/algorithms/pycrypto.py -> build/lib/jwt/contrib/algorithms
creating build/bdist.linux-x86_64
creating build/bdist.linux-x86_64/egg
creating build/bdist.linux-x86_64/egg/jwt
copying build/lib/jwt/utils.py -> build/bdist.linux-x86_64/egg/jwt
copying build/lib/jwt/compat.py -> build/bdist.linux-x86_64/egg/jwt
copying build/lib/jwt/algorithms.py -> build/bdist.linux-x86_64/egg/jwt
copying build/lib/jwt/api.py -> build/bdist.linux-x86_64/egg/jwt
creating build/bdist.linux-x86_64/egg/jwt/contrib
creating build/bdist.linux-x86_64/egg/jwt/contrib/algorithms
copying build/lib/jwt/contrib/algorithms/__init__.py -> build/bdist.linux-x86_64/egg/jwt/contrib/algorithms
copying build/lib/jwt/contrib/algorithms/py_ecdsa.py -> build/bdist.linux-x86_64/egg/jwt/contrib/algorithms
copying build/lib/jwt/contrib/algorithms/pycrypto.py -> build/bdist.linux-x86_64/egg/jwt/contrib/algorithms
copying build/lib/jwt/contrib/__init__.py -> build/bdist.linux-x86_64/egg/jwt/contrib
copying build/lib/jwt/__init__.py -> build/bdist.linux-x86_64/egg/jwt
copying build/lib/jwt/exceptions.py -> build/bdist.linux-x86_64/egg/jwt
byte-compiling build/bdist.linux-x86_64/egg/jwt/utils.py to utils.pyc
byte-compiling build/bdist.linux-x86_64/egg/jwt/compat.py to compat.pyc
byte-compiling build/bdist.linux-x86_64/egg/jwt/algorithms.py to algorithms.pyc
byte-compiling build/bdist.linux-x86_64/egg/jwt/api.py to api.pyc
byte-compiling build/bdist.linux-x86_64/egg/jwt/contrib/algorithms/__init__.py to __init__.pyc
byte-compiling build/bdist.linux-x86_64/egg/jwt/contrib/algorithms/py_ecdsa.py to py_ecdsa.pyc
byte-compiling build/bdist.linux-x86_64/egg/jwt/contrib/algorithms/pycrypto.py to pycrypto.pyc
byte-compiling build/bdist.linux-x86_64/egg/jwt/contrib/__init__.py to __init__.pyc
byte-compiling build/bdist.linux-x86_64/egg/jwt/__init__.py to __init__.pyc
byte-compiling build/bdist.linux-x86_64/egg/jwt/exceptions.py to exceptions.pyc
creating build/bdist.linux-x86_64/egg/EGG-INFO
installing scripts to build/bdist.linux-x86_64/egg/EGG-INFO/scripts
running install_scripts
running build_scripts
creating build/scripts-2.7
copying and adjusting bin/jwt -> build/scripts-2.7
changing mode of build/scripts-2.7/jwt from 664 to 775
creating build/bdist.linux-x86_64/egg/EGG-INFO/scripts
copying build/scripts-2.7/jwt -> build/bdist.linux-x86_64/egg/EGG-INFO/scripts
changing mode of build/bdist.linux-x86_64/egg/EGG-INFO/scripts/jwt to 775
copying PyJWT.egg-info/PKG-INFO -> build/bdist.linux-x86_64/egg/EGG-INFO
copying PyJWT.egg-info/SOURCES.txt -> build/bdist.linux-x86_64/egg/EGG-INFO
copying PyJWT.egg-info/dependency_links.txt -> build/bdist.linux-x86_64/egg/EGG-INFO
copying PyJWT.egg-info/top_level.txt -> build/bdist.linux-x86_64/egg/EGG-INFO
zip_safe flag not set; analyzing archive contents...
creating dist
creating 'dist/PyJWT-1.1.0-py2.7.egg' and adding 'build/bdist.linux-x86_64/egg' to it
removing 'build/bdist.linux-x86_64/egg' (and everything under it)
Processing PyJWT-1.1.0-py2.7.egg
Copying PyJWT-1.1.0-py2.7.egg to /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages
Adding PyJWT 1.1.0 to easy-install.pth file
Installing jwt script to /home/ubuntu/miniconda/envs/_build/bin

Installed /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/PyJWT-1.1.0-py2.7.egg
Processing dependencies for PyJWT==1.1.0
Finished processing dependencies for PyJWT==1.1.0

The following NEW packages will be INSTALLED:

    openssl:    1.0.1k-1    
    pip:        6.1.1-py27_0
    python:     2.7.9-3     
    readline:   6.2-2       
    setuptools: 16.0-py27_0 
    sqlite:     3.8.4.1-1   
    system:     5.8-2       
    tk:         8.5.18-0    
    zlib:       1.2.8-0     

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  11%[sqlite              ]|###########                                       |  22%[system              ]|################                                  |  33%[tk                  ]|######################                            |  44%[zlib                ]|###########################                       |  55%[python              ]|#################################                 |  66%[setuptools          ]|######################################            |  77%[pip                 ]|############################################      |  88%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Source cache directory is: /home/ubuntu/miniconda/conda-bld/src_cache
Found source in cache: PyJWT-1.1.0.tar.gz
Extracting download
Package: pyjwt-1.1.0-py27_0
source tree in: /home/ubuntu/miniconda/conda-bld/work/PyJWT-1.1.0
found egg: /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/PyJWT-1.1.0-py2.7.egg
number of files: 3
Fixing permissions
Detected hard-coded path in text file bin/jwt
Fixing permissions
BUILD END: pyjwt-1.1.0-py27_0
TEST START: pyjwt-1.1.0-py27_0
Fetching package metadata: ......
Solving package specifications: .  File "/home/ubuntu/miniconda/conda-bld/test-tmp_dir/run_test.py", line 28
    import jwt/contrib
              ^
SyntaxError: invalid syntax

The following packages will be downloaded:

    package                    |            build
    ---------------------------|-----------------
    pyjwt-1.1.0                |           py27_0          28 KB

The following NEW packages will be INSTALLED:

    openssl:    1.0.1k-1    
    pip:        6.1.1-py27_0
    pyjwt:      1.1.0-py27_0
    python:     2.7.9-3     
    readline:   6.2-2       
    setuptools: 16.0-py27_0 
    sqlite:     3.8.4.1-1   
    system:     5.8-2       
    tk:         8.5.18-0    
    zlib:       1.2.8-0     

Fetching packages ...
pyjwt-1.1.0-py   0% |                              | ETA:  --:--:--   0.00  B/spyjwt-1.1.0-py  57% |#################              | ETA:  0:00:00  47.36 MB/spyjwt-1.1.0-py 100% |###############################| ETA:  0:00:00  52.63 MB/spyjwt-1.1.0-py 100% |###############################| Time: 0:00:00  37.74 MB/s
Extracting packages ...
[      COMPLETE      ]|                                                  |   0%[pyjwt               ]|                                                  |   0%[pyjwt               ]|                                                  |   0%[      COMPLETE      ]|##################################################| 100%
Linking packages ...
[      COMPLETE      ]|                                                  |   0%[openssl             ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  10%[sqlite              ]|##########                                        |  20%[system              ]|###############                                   |  30%[tk                  ]|####################                              |  40%[zlib                ]|#########################                         |  50%[pyjwt               ]|##############################                    |  60%[python              ]|###################################               |  70%[setuptools          ]|########################################          |  80%[pip                 ]|#############################################     |  90%[      COMPLETE      ]|##################################################| 100%
TESTS FAILED: pyjwt-1.1.0-py27_0
